test/good/classes/method09.px

class A def
    func f() Int def
        return self.x * 2

    Int x: 5

print A().f()
