test/bad/functions/variadic05.px

func f(...x: Bool) def
    return

f(1, 2)
